<resources>
    <string name="app_name">Спортивные прогнозы</string>
    <string name="category_football">Футбол</string>
    <string name="category_hockey">Хоккей</string>
    <string name="category_tennis">Теннис</string>
    <string name="category_basketball">Баскетболл</string>
    <string name="category_volleyball">Волейбол</string>
    <string name="category_cybersport">Киберспорт</string>
    <string name="prediction">Прогноз</string>
    <string name="no_internet">Отсутствует подкючение к интернету</string>
    <string name="network_error">Ошибка сети</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="unknown_error">Неизвестная ошибка</string>
</resources>
