<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/category_football"
            android:title="@string/category_football" />
        <item
            android:id="@+id/category_hockey"
            android:title="@string/category_hockey" />
        <item
            android:id="@+id/category_tennis"
            android:title="@string/category_tennis" />
        <item
            android:id="@+id/category_basketball"
            android:title="@string/category_basketball" />
        <item
            android:id="@+id/category_volleyball"
            android:title="@string/category_volleyball" />

        <item
            android:id="@+id/category_cybersport"
            android:title="@string/category_cybersport" />
    </group>
</menu>